--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=e80e38cd0cd06f8a2fa1adeb77131daf
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:symfony@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:symfony@127.0.0.1:5434/edt?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://postgres:mypassword@127.0.0.1:5434/edt?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
